# GekkoFS

./: .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
CMake/: FindAGIOS.cmake  FindAIO.cmake  FindArgobots.cmake  FindFilesystem.cmake  FindGF_complete.cmake  FindJerasure.cmake  FindMargo.cmake  FindMercury.cmake  FindParallax.cmake  FindSnappy.cmake  FindSphinx.cmake  FindSyscall_intercept.cmake  FindZStd.cmake  findCargo.cmake  gkfs-code-coverage.cmake  gkfs-options.cmake  gkfs-python-testing.cmake  gkfs-utils.cmake  load_nlohmann_json.cmake
apps/nek5000/: README.md
apps/nek5000/HPC4AI/: run_beegfs.sh  run_beegfs_wrapper.sbatch  run_gkfs.sh  run_gkfs_wrapper.sbatch  sched_beegfs.sh  sched_gkfs.sh
apps/nek5000/mogon-nhr/: gkfs_proxy.conf  gkfs_sockets.conf  run_gkfs.sh  run_gkfs_wrapper.sbatch  run_lustre.sh  run_lustre_wrapper.sbatch  runner_lustre.sh  sched_gkfs.sh  sched_lustre.sh
apps/quantum_espresso/: README.org  alloc_many_nodes.sh  alloc_single_node.sh  darshan.config  gkfs.conf  job.sh  job_M2.sbatch  job_NHR.sbatch  shedule_and_observe_single_job.sh  sync_to_mogon.sh
apps/quantum_espresso/darshan_logs_safe/: frschimm_alpha2f.x_id14968328-5536_3-20-62363-7445212870613279016_49.darshan  frschimm_ph.x_id14968328-4997_3-20-61247-16768705354772886781_7.darshan  frschimm_ph.x_id14968328-5252_3-20-61628-17037621612022086128_34.darshan  frschimm_pw.x_id14968328-4829_3-20-61197-13241650729420385839_44.darshan
apps/software-heritage/: README.org  gkfs.MOGONNHR.conf  job.sh  job_TORINO.sbatch  mogon_sync.sh  shedule_and_observe_single_job.sh  shedule_jobs.sh  torino_alloc.sh  torino_sync.sh
apps/vpicio/: README.org  job.sbatch  job.sh  shedule_and_observe_single_job.sh  sync_to_mogon.sh
apps/wacommpp/: README.org  gkfs.TORINO.conf  job.sh  job_NHR.sbatch  job_TORINO.sbatch  shedule_and_observe_single_job.sh  sources-webinar.modified.json  spack.source  torino_alloc.sh  torino_sync.sh  wacomm.gkfs.json  wacomm.pfs.json
config/GekkoFWD/agios/: agios.conf
docker/0.9.3-exp/core/: Makefile
docker/0.9.3-exp/docs/: Dockerfile  Makefile
docker/0.9.3-exp/linter/: Dockerfile  Makefile
docker/0.9.3-exp/testing/: Dockerfile  Makefile
docker/0.9.3/core/: Makefile
docker/0.9.3/docs/: Dockerfile  Makefile
docker/0.9.3/linter/: Dockerfile  Makefile
docker/0.9.3/testing/: Dockerfile  Makefile
docs/sphinx/: conf.py.in
docs/sphinx/users/: dependencies.rst  forwarding.rst  scripts.rst
etc/: path.conf
examples/: CMakeLists.txt
examples/distributors/guided/: generate.py
examples/gfind/: CMakeLists.txt  gfind.cpp  gkfs_lib_example.cpp  sfind.cpp
examples/user_library/: CMakeLists.txt  gkfs_lib_example.cpp
include/: CMakeLists.txt  config.hpp  version.hpp.in
include/client/: CMakeLists.txt  black_list.hpp  cache.hpp  direct_created.hpp  env.hpp  find_path.hpp  gkfs_functions.hpp  hooks.hpp  logging.hpp  path.hpp  preload.hpp  preload_context.hpp  preload_util.hpp  removed_path.hpp  user_functions.hpp  void_syscall_intercept.hpp
include/client/rpc/: forward_data.hpp  forward_data_proxy.hpp  forward_malleability.hpp  forward_metadata.hpp  forward_metadata_proxy.hpp  rpc_types.hpp
include/client/syscalls/: args.hpp  decoder.hpp  rets.hpp
include/common/: CMakeLists.txt  cmake_configure.hpp.in  common_defs.hpp  env_util.hpp  msgpack_util.hpp
include/common/rpc/: distributor.hpp  rpc_types.hpp  rpc_util.hpp
include/common/staging/: hsm_extension.hpp  hsmrequest.hpp  stagelist.hpp  transfer.hpp
include/daemon/: CMakeLists.txt
include/daemon/classes/: fs_data.hpp  rpc_data.hpp
include/daemon/handler/: rpc_defs.hpp
include/daemon/malleability/: malleable_manager.hpp
include/daemon/ops/: data.hpp
include/daemon/stagingdata/: flushback.hpp  initialize_hsm.hpp
include/proxy/: CMakeLists.txt  env.hpp  proxy.hpp  proxy_data.hpp  util.hpp
include/proxy/rpc/: forward_data.hpp  forward_metadata.hpp  rpc_defs.hpp  rpc_util.hpp
marc/: CMakeLists.txt  main.cpp
scripts/: compile_dep.sh  dl_dep.sh  gkfs_dep.sh
scripts/Cargo_deps/: download_dep.sh  install_dep.sh
scripts/maintainer-tools/copyright-headers/: README.md
scripts/profiles/: sources.list
scripts/profiles/0.9.3/: agios.specs  all.specs  arm.specs  ci.specs  default.specs  default_zmq.specs  direct.specs  infiniband_verbs.specs  marenostrum4.specs  mogon2.specs  mogon3.specs  ngio.specs  omnipath_psm2.specs  p9.specs
scripts/profiles/0.9.3-exp/: all.specs  ci.specs
scripts/run/: gkfs  gkfs.conf  gkfs_io500.conf  gkfs_io500_proxy.conf
src/: CMakeLists.txt
src/client/: CMakeLists.txt  black_list.cpp  cache.cpp  direct_created.cpp  find_path.cpp  gkfs_functions.cpp  hooks.cpp  intercept.cpp  logging.cpp  malleability.cpp  path.cpp  preload.cpp  preload_context.cpp  preload_util.cpp  removed_path.cpp  void_syscall_intercept.cpp
src/client/rpc/: forward_data.cpp  forward_data_proxy.cpp  forward_malleability.cpp  forward_management.cpp  forward_metadata.cpp  forward_metadata_proxy.cpp  rpc_types.cpp
src/client/syscalls/: util.S
src/common/: CMakeLists.txt  env_util.cpp  msgpack_util.cpp
src/common/arithmetic/: CMakeLists.txt
src/common/rpc/: distributor.cpp
src/common/staging/: hsm_extension.cpp  hsmrequest.cpp  stagelist.cpp  transfer.cpp
src/daemon/: CMakeLists.txt  daemon.cpp  util.cpp
src/daemon/backend/: CMakeLists.txt
src/daemon/classes/: fs_data.cpp  rpc_data.cpp
src/daemon/handler/: srv_data.cpp  srv_malleability.cpp  srv_management.cpp  srv_metadata.cpp
src/daemon/malleability/: malleable_manager.cpp
src/daemon/ops/: data.cpp
src/proxy/: CMakeLists.txt  env.cpp  proxy.cpp  proxy_data.cpp  util.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  conftest.py.in  pytest.ini.in  pytest.install.ini.in  requirements.txt.in
tests/integration/harness/: CMakeLists.txt  gkfs.py
tests/integration/harness/gkfs.io/: serialize.hpp
tests/unit/: CMakeLists.txt  test_guided_distributor.cpp  test_path.cpp
tools/: CMakeLists.txt  clientmetrics2json.cpp  malleability.cpp
(+76 files in other folders)
